meta tags added

--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Doctor appointment booking app"
+      name="Doctor Appointment Booking app"
+      content="Specialized consultation to take care of your medical needs !"
     />
+    <!-- social-media-tags -->
+    <meta property="og:type" content="Medicine" />
+    <meta property="og:url" content="https://doctor-appointment-creator.netlify.app/" />
+    <meta property="og:image" content="doc.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
