meta author added

--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,11 @@
     />
     <!-- social-media-tags -->
     <meta property="og:type" content="Medicine" />
+    <meta property="og:author" content="waluka" />
     <meta property="og:url" content="https://doctor-appointment-creator.netlify.app/" />
+    <meta property="og:description" content="Specialized consultation to take care of your medical needs !" />
     <meta property="og:image" content="doc.png" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/doc.png" />
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <!--
