meta name and date added

--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,10 @@
       name="Doctor Appointment Booking app"
       content="Specialized consultation to take care of your medical needs !"
     />
+    <meta name="updated" content="TutorialBrain, 04/10/2022"/>
+    <meta name="author" content="Waluka">
     <!-- social-media-tags -->
     <meta property="og:type" content="Medicine" />
-    <meta property="og:author" content="waluka" />
     <meta property="og:url" content="https://doctor-appointment-creator.netlify.app/" />
     <meta property="og:description" content="Specialized consultation to take care of your medical needs !" />
     <meta property="og:image" content="doc.png" />
